# structured-extraction-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
extractor/: __init__.py  artifact_schema.py  artifact_validate.py  cli.py  errors.py  files.py  hash_utils.py  input_extract.py  input_validation.py  json_diff.py  json_parse.py  output.py  preprocess.py  prompt_builder.py  redaction.py  report.py  runner.py  schema.py  schema_check.py  snapshot.py
extractor/prompts/: extraction_prompt.txt
extractor/provider/: base.py  openai_provider.py
inputs/: sample_1.txt
inputs/failure_corpus/: 01_ambiguous_person.txt  02_missing_city.md  03_conflicting_age.txt  04_noisy_markdown.md  05_json_nested_strings.json  06_json_conflict.json  07_sparse_text.txt  08_tab_noise.md  09_long_context_edge.txt  10_mixed_mentions.json
prompts/: extraction_prompt.txt
schemas/: extraction_schema.json
scripts/: extract_then_validate.sh  validate_artifact_sentinel.py
tests/: test_artifact_schema.py  test_canonical_formatting.py  test_cli.py  test_cli_params.py  test_contract_boundaries.py  test_diff_artifacts_cli.py  test_diff_cli.py  test_empty_output_contract.py  test_input_types.py  test_input_validation.py  test_metadata_output.py  test_preprocess.py  test_prompt_hash.py  test_redaction.py  test_replay_cli.py  test_report_cli.py  test_schema_check_cli.py  test_snapshot_compare_cli.py  test_validate_artifact_sentinel.py  test_validate_standalone_cli.py
