[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structured-extraction-demo"
version = "0.1.0"
description = "Minimal CLI-based LLM extraction app"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "jsonschema>=4.0.0",
]

[project.scripts]
extract = "extractor.cli:main"

[tool.setuptools.package-data]
extractor = ["prompts/*.txt"]

